--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,11 @@
 	"extends": [
 		"airbnb/base"
 	],
+  "parserOptions": {
+    "sourceType": "script"
+  },
 	"rules": {
+    // "strict": ["error", "global"],
 		//перенос строк для windows
 		"linebreak-style": [
 			"error",
