--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,10 @@
 	"rules": {
     "strict": [0, "global"],
 		//перенос строк для windows
-		"linebreak-style": [
-			"error",
-			"windows"
-		],
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
 		// неиспользуемые переменные
 		"no-unused-vars": "warn",
 		// сонсоль алерт
